# sentinel-cyber-ai

./: .gitignore  .vercelignore  =12.0  DEPLOYMENT-GUIDE.md  DISASTER_RECOVERY.md  GITHUB-SECRETS-GUIDE.md  HONEST_WEAKNESSES.md  PROJECT_SNAPSHOT.md  README.md  pyproject.toml  requirements.txt  requirements.vercel.txt  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: index.py
config/: agents.yaml  training_config.yaml
docker/: Dockerfile  Dockerfile.prod  docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf  sentinel.conf
docker/postgres/: init.sql
docker/prometheus/: alert.rules.yml  prometheus.yml
docs/: FABLE5_REVERSE_ENGINEERING.md
helm/sentinel/: Chart.yaml  values.yaml
hooks/: pre-commit
notebooks/: sentinel_colab.ipynb
scripts/: backup.sh  benchmark.py  deploy-check.sh  deploy.py  deploy.sh  inference.py  prepare_dataset.py  quick_test.py  rl_finetune_loop.py  run_agent.py  setup-ssl.sh  train_sentinel.py
sentinel-vscode/: .vscodeignore  README.md  extension.js  package.json
src/: __init__.py  main.py
src/adversarial/: resilience.py
src/agents/: analysis_agent.py  base_agent.py  exploit_agent.py  orchestrator.py  patch_agent.py  report_agent.py  scanner_agent.py
src/api/: integration_routes.py  routes.py  (+3 more)
terraform/: README.md
tests/: __init__.py  conftest.py  test_agents.py  test_auto_remediation.py  test_benchmark.py  test_commands.py  test_dashboard.py  test_mcp.py  test_model_router.py  test_orchestrator.py  test_permissions.py  test_self_play_v2.py  test_siem.py  test_vision_v2.py  test_webhooks.py
(+99 files in other folders)
